syntax = "proto3";

package ie.gmit.ds;

option java_multiple_files = true;
option java_package = "ie.gmit.ds";
import "google/protobuf/wrappers.proto";

service PasswordService {
    rpc hash(HashLoginRequest) returns (HashLoginResponse);
    rpc validate(ValidatePasswordRequest) returns (google.protobuf.BoolValue);
}

message HashLoginRequest {
    int32 userId = 1;
    string password = 2;
}

message HashLoginResponse{
    int32 userId = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

message ValidatePasswordRequest {
    string password = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}